--- a/package.json
+++ b/package.json
@@ -1,20 +1,47 @@
 {
 	"name": "zore-cli",
-	"version": "1.0.0",
+	"version": "1.0.1",
 	"description": "",
+	"private": false,
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "npm run lint && npm run e2e",
+		"lint": "eslint test/e2e/test*.js lib bin/* --env mocha",
+		"e2e": "rimraf test/e2e/mock-template-build && mocha test/e2e/test.js --slow 1000"
 	},
 	"bin": {
-		"hi": "./bin/hi.js"
+		"zore": "bin/zore"
 	},
 	"author": "zore",
-	"license": "ISC",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/zorewy/zore-cli/issues"
+	},
+	"keywords": [
+		"webpack",
+		"zore-cli",
+		"zore"
+	],
+	"engines": {
+		"node": ">=8.0.0"
+	},
+	"repository": {
+		"type": "git",
+		"url": ""
+	},
+	"dependencies": {},
 	"devDependencies": {
-		"babel-cli": "^6.26.0",
-		"babel-eslint": "^10.0.1",
-		"babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
-		"babel-preset-latest-node": "^3.0.1"
+		"chalk": "^2.4.1",
+		"commander": "^2.19.0",
+		"debug": "^4.1.0",
+		"lodash": "^4.17.11",
+		"read-pkg": "^4.0.1",
+		"readline": "^1.3.0",
+		"resolve-cwd": "^2.0.0",
+		"rimraf": "^2.6.2",
+		"semver": "^5.6.0",
+		"string.prototype.padstart": "^3.0.0",
+		"webpack-chain": "^5.0.1",
+		"webpack-merge": "^4.1.5"
 	}
 }
