--- a/package.json
+++ b/package.json
@@ -27,13 +27,15 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": ""
+		"url": "git+https://github.com/zorewy/webpack-template"
 	},
 	"dependencies": {},
 	"devDependencies": {
 		"chalk": "^2.4.1",
 		"commander": "^2.19.0",
 		"debug": "^4.1.0",
+		"download-git-repo": "^1.1.0",
+		"inquirer": "^6.2.1",
 		"lodash": "^4.17.11",
 		"read-pkg": "^4.0.1",
 		"readline": "^1.3.0",
