--- a/package.json
+++ b/package.json
@@ -31,12 +31,18 @@
 	},
 	"dependencies": {},
 	"devDependencies": {
+		"axios": "^0.18.0",
 		"chalk": "^2.4.1",
 		"commander": "^2.19.0",
 		"debug": "^4.1.0",
 		"download-git-repo": "^1.1.0",
+		"ejs": "^2.6.1",
+		"handlebars": "^4.0.12",
 		"inquirer": "^6.2.1",
 		"lodash": "^4.17.11",
+		"metalsmith": "^2.3.0",
+		"minimist": "^1.2.0",
+		"ora": "^3.0.0",
 		"read-pkg": "^4.0.1",
 		"readline": "^1.3.0",
 		"resolve-cwd": "^2.0.0",
