--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "zore-cli",
-	"version": "1.0.1",
+	"version": "1.0.3",
 	"description": "",
 	"private": false,
 	"main": "index.js",
@@ -29,8 +29,7 @@
 		"type": "git",
 		"url": "git+https://github.com/zorewy/webpack-template"
 	},
-	"dependencies": {},
-	"devDependencies": {
+	"dependencies": {
 		"axios": "^0.18.0",
 		"chalk": "^2.4.1",
 		"commander": "^2.19.0",
