--- a/package.json
+++ b/package.json
@@ -4,11 +4,7 @@
 	"description": "",
 	"private": false,
 	"main": "index.js",
-	"scripts": {
-		"test": "npm run lint && npm run e2e",
-		"lint": "eslint test/e2e/test*.js lib bin/* --env mocha",
-		"e2e": "rimraf test/e2e/mock-template-build && mocha test/e2e/test.js --slow 1000"
-	},
+	"scripts": {},
 	"bin": {
 		"zore": "bin/zore"
 	},
@@ -47,6 +43,8 @@
 		"resolve-cwd": "^2.0.0",
 		"rimraf": "^2.6.2",
 		"semver": "^5.6.0",
+		"shell": "^0.5.0",
+		"shelljs": "^0.8.3",
 		"string.prototype.padstart": "^3.0.0",
 		"webpack-chain": "^5.0.1",
 		"webpack-merge": "^4.1.5"
