--- a/package.json
+++ b/package.json
@@ -26,27 +26,16 @@
 		"url": "git+https://github.com/zorewy/webpack-template"
 	},
 	"dependencies": {
-		"axios": "^0.18.0",
 		"chalk": "^2.4.1",
 		"commander": "^2.19.0",
-		"debug": "^4.1.0",
 		"download-git-repo": "^1.1.0",
-		"ejs": "^2.6.1",
 		"handlebars": "^4.0.12",
 		"inquirer": "^6.2.1",
 		"lodash": "^4.17.11",
 		"metalsmith": "^2.3.0",
 		"minimist": "^1.2.0",
 		"ora": "^3.0.0",
-		"read-pkg": "^4.0.1",
-		"readline": "^1.3.0",
-		"resolve-cwd": "^2.0.0",
 		"rimraf": "^2.6.2",
-		"semver": "^5.6.0",
-		"shell": "^0.5.0",
-		"shelljs": "^0.8.3",
-		"string.prototype.padstart": "^3.0.0",
-		"webpack-chain": "^5.0.1",
-		"webpack-merge": "^4.1.5"
+		"semver": "^5.6.0"
 	}
 }
